@@ -1725,7 +1725,10 @@ import_db(
     skip_whitespace(s, ch);
     if(ch == '\0'
        || sscanf(s - 1, "%d.%d.%d", &vers_maj, &vers_min, &vers_patch) != 3) {
-	goto bad_header;
+	vers_patch = -1;
+	if (sscanf(s - 1, "%d.%d", &vers_maj, &vers_min) != 2) {
+	    goto bad_header;
+	}
     }
 
     skip_integer(s, ch);			/* skip over major */
@@ -1734,11 +1737,15 @@ import_db(
     }
     ch = *s++;
     skip_integer(s, ch);			/* skip over minor */
-    if(ch != '.') {
-	goto bad_header;
+    if (vers_patch != -1) {
+	if (ch != '.') {
+	    goto bad_header;
+	}
+	ch = *s++;
+	skip_integer(s, ch);			/* skip over patch */
+    } else {
+	vers_patch = 0;
     }
-    ch = *s++;
-    skip_integer(s, ch);			/* skip over patch */
 
     hdr = "comment";
     if(ch == '\0') {
